Style <result> element (#286)
* Introduce a div container
* Use hard-coded "Result" term for the time being

--- a/suse2013/static/css/style.css
+++ b/suse2013/static/css/style.css
@@ -2427,6 +2427,14 @@ li > p {
     margin: 0 10px 5px;
 }
 
+.result {
+  margin-left: -20px;
+}
+
+.result-title {
+  font-weight: bold;
+}
+
 div.itemizedlist {
     margin: 0 0 24px;
 }
